set maven --enable-preview for pattern matching switch statements